--- a/front-end/src/components/Common/Navbar/Nav.css
+++ b/front-end/src/components/Common/Navbar/Nav.css
@@ -1,11 +1,28 @@
+#navbar-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+#logo-container{
+  display: flex;
+  align-items: center;
+}
+
 .color {
   background-color: #009900;
 }
 
-.logo {
-  padding: 20px;
+#text-left {
+  text-align: left;
+}
+h3 #home-nav {
+  width: 100%;
+  text-align: center;
 }
 
-.log {
-  margin-left: 35vmax;
+.text-white {
+  color: white;
 }
+
+
