--- a/front-end/src/pages/MainApp/style.css
+++ b/front-end/src/pages/MainApp/style.css
@@ -53,7 +53,7 @@ body{
   padding: 10px;
 }
 
-.login-signup, .create-project {
+.login-signup {
   text-align: center;
   width: 250px;
   margin: 0 auto;
@@ -67,15 +67,6 @@ body{
   border-radius: 5px;
   background-image: linear-gradient(#FFFFFF, #C8C8C8);
   line-height: 1;
-}
-
-.create-project {
-  width: 50rem;
-}
-
-.newProjectForm {
-  width: 40rem;
-  text-align: left;
 }
 
 .btn.btn-outline-light {
